<resources>
    <string name="app_name">DigitalGames</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">log in</string>
    <string name="create_account">Create Account</string>
    <string name="remember">Remember</string>
    <string name="name">Name</string>
    <string name="repeate_password">Repeate password</string>
    <string name="lan_amento">Lançamento:</string>
    <string name="save_game">Save game</string>
    <string name="created_at">Created at</string>
    <string name="description">Description</string>
    <string name="game_item_image">game item image</string>
    <string name="background">background</string>
    <string name="add_item_fab">Add item floating action button</string>
    <string name="cover_image">cover image</string>
    <string name="back_image_button">back image button</string>
    <string name="edit_game_fab">edit game floating action button</string>
    <string name="chosen_image_area">chosen image area</string>
    <string name="add_photo_image">add photo image area</string>
</resources>